samples/_failures_safe/1761097429_84092e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_346fec54.c: In function ‘main’:
./samples/SAFE/__tmp_346fec54.c:154:13: error: expected expression at end of input
  154 |             case
      |             ^~~~
./samples/SAFE/__tmp_346fec54.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_346fec54.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_346fec54.c:154:13: error: expected declaration or statement at end of input
